Resolves: tdf#119402 +- typo sign flip

Regression from

    commit 667aa6ade94a4dee441868d21db037e42c871932
    CommitDate: Wed Jul 19 20:13:58 2017 +0200

        Avoid temporary Date and normalization

that introduced a sign flip
from        +  5 - eDay
to          + (5 + eDay)
instead of  + (5 - eDay)

Change-Id: I28194296b20552135e6abd24eb9eefe8634ce7c0
Reviewed-on: https://gerrit.libreoffice.org/59461
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit cadd6c595b250b3ce0025a2a09c160eaae483d5a)